fixed flicker bug during drag events

--- a/assets/style/upload.css
+++ b/assets/style/upload.css
@@ -43,6 +43,16 @@ body {
   visibility: hidden;
 }
 
+#drag-shield {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: none;
+}
+
 .clickable {
   cursor: pointer;
 }
